frontend/src/css/main.less
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
@import './button.less';
@import './map.less';
@import './info-window.less';
@import './input.less';

html,
body {
  height: 100%;
}

html {
  --font-body: 'Inter', sans-serif;
  --font-title: 'Space Grotesk', sans-serif;

  --bg-dark: #1b1f23;
  --white: #f8fafc;
  --black: #1a1a1a;

  --purple: #8b5cf6;
  --lime: #22c55e;
  --error: #ff4d4f;

  font-family: var(--font-body);
  font-size: 62.5%;
}

body {
  margin: 0;
  // overflow: hidden;
  color: var(--white);
  background-color: var(--bg-dark);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-align: center;
  margin: 0;
  font-family: var(--font-title);

  &.normal {
    font-family: var(--font-body);
    font-weight: 400;
  }
}
p {
  margin: 0;
}

h1 {
  font-size: 4.2rem;

  &.big {
    font-size: 6.8rem;
  }

  &.small {
    font-size: 2.6rem;
  }
}

h2 {
  font-size: 2.6rem;

  &.big {
    font-size: 4.2rem;
  }

  &.small {
    font-size: 2rem;
  }
}

h3,
h4,
h5,
h6 {
  font-size: 2rem;

  &.big {
    font-size: 2.6rem;
  }

  &.small {
    font-size: 1.6rem;
  }
}

p,
span,
a,
li,
button {
  font-size: 1.6rem;
  line-height: 1.5;
  font-weight: 400;
  color: var(--white);

  &.bold {
    font-weight: 600;
  }
}

.leaflet-control-zoom-in,
.leaflet-control-zoom-out {
  span {
    color: var(--black);
  }
}

.shadow {
  box-shadow:
    0 2px 3px 1px rgba(0, 0, 0, 0.5),
    0 0 10px 0 rgba(0, 0, 0, 0.25);
}

.error {
  color: var(--error);
}

